[package]
name = "lemmy_know"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
lemmy-client = "1.0.5"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-util = { version =  "0.7.15", features = ["rt"]}
serde_json = "1.0.140"
diesel = { version = "2.2.0", features = ["postgres", "serde_json"] }
diesel-async = { version = "0.5.2", features = ["postgres"] }
anyhow = "1.0.98"
webhook = "2.1.2"
rumqttc = "0.24.0"
async-trait = "0.1.86"
serde = { version = "1.0.219", features = ["derive"] }